5.3.4 -> 5.3.5:
    - proyvind: add tcl macros from mandriva.
    - proyvind: add ruby macros from mandriva.
    - proyvind: add macros from mandriva that's fairly generic enough to
	possibly be of use to others, in mandriva/macros.
    - jbj: spewage: use RPMTAG_SHA1HEADER as the primary retrieval key.
    - jbj: rpmpopt: fix: permit popt aliases to be used w "make check".
    - jbj: pgp: add a 2nd parameter to pgpDigNew to generate a keypair.
    - jbj: rpmbc: refactor rpmbcExport{Pubkey,Signature} out of rpmbuild code.
    - jbj: mongo: add --json to spew document structured metadata in JSON.
    - jbj: mongo: add --qf templates for primary/filelists/other imports.
    - jbj: spewage: add :jsonescape header format extension.
    - jbj: db: specify only db-5.1.19 external for building, remove the cruft.
    - jbj: tests: resurrect the "check-ACID" target using external db51_utils.
    - jbj: db: build against external db-5.1.19 using --with-db/--with-dbsql.
    - jbj: rpmlio: disable for now, needs --with-db=internal.
    - jbj: db_tool: disable for now, needs --with-db=internal.
    - jbj: db: target db-5.1.19 using --with-db=external.
    - proyvind: rpm46compat: mostly(?) fix rpmtd iterator
    - jbj: add Fadvise wrapper for posix_dadvise(2).
    - jbj: fix: eliminate dueling --noorder options.
    - jbj: solvedb's never need a chroot prefix.

5.3.3 -> 5.3.4:
    - jbj: release 5.3.4.
    - jbj: i18n: update po files (Translation Project).
    - jbj: rpmrepo: finish refactoring tools/rpmrepo.c.
    - jbj: move package.c from lib -> rpmdb.
    - jbj: rpmrepo: move from rpmio -> rpmdb to finish tools/rpmrepo.c gutting.
    - devzero2000 : added --withoutcheck popt alias (#lp:634104) (#mdvbz:35423)
    - jbj: perl: don't automate use RPM, @INC issues need to be solved first.
    - jbj: macosx: avoid <unistd.h> uuid_t typedef, permit --with-uuid.
    - jbj: macosx: add -fnested-functions (when available).
    - jbj: i18n: update po files (Translation Project).