@@ -1,4 +1,5 @@
 5.3.4 -> 5.3.5:
+    - proyvind: add cmake macros from fedora/mandriva.
     - proyvind: add tcl macros from mandriva.
     - proyvind: add ruby macros from mandriva.
     - proyvind: add macros from mandriva that's fairly generic enough to
